--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Concern</string>
+    <string name="app_name">GuitarFBISh</string>
     <string name="ime">language(Ru/En)</string>
     <string name="subtype_en_US">CastomShop_FBISh_Keyboard</string>
 </resources>
